--- a/src/ui/internal-audit/src/app/containers/default-layout/default-footer/default-footer.component.html
+++ b/src/ui/internal-audit/src/app/containers/default-layout/default-footer/default-footer.component.html
@@ -1,12 +1,12 @@
 <!--<c-footer>-->
   <div>
-    <a href="https://coreui.io/pro/angular/" target="_blank">CoreUI</a>
-    <span> &copy; 2022 creativeLabs</span>
+    <a href="https://www.asa-international.com/" target="_blank">Internal-Audit</a>
+    <span> &copy; 2022 ASA International Management Services Limited</span>
   </div>
   <div class="ms-auto">
     Powered by
-    <a href="https://coreui.io/pro/angular" target="_blank">
-      <span> CoreUI v4 for Angular</span>
+    <a href="https://www.asa-international.com/" target="_blank">
+      <span> ASA International</span>
     </a>
   </div>
 <!--</c-footer>-->
