--- a/src/ui/internal-audit/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/ui/internal-audit/src/app/containers/default-layout/default-header/default-header.component.html
@@ -13,7 +13,7 @@
       ></svg>
     </button>
     <c-header-nav class="d-none d-lg-flex me-auto">
-      <c-nav-item>
+      <!-- <c-nav-item>
         <a cNavLink routerLink="/dashboard" routerLinkActive="active">
           Dashboard
         </a>
@@ -25,7 +25,7 @@
         <a cNavLink routerLink="/settings" routerLinkActive="active">
           Settings
         </a>
-      </c-nav-item>
+      </c-nav-item> -->
     </c-header-nav>
 
     <c-header-nav class="d-none d-lg-flex">
@@ -70,7 +70,7 @@
         cTextColor="primary"
         shape="rounded-1"
         size="md"
-        src="./assets/img/avatars/8.jpg"
+        src="./assets/img/avatars/user.png"
         status="success"
       >
       </c-avatar>
