--- a/src/ui/internal-audit/src/app/containers/default-layout/default-layout.component.html
+++ b/src/ui/internal-audit/src/app/containers/default-layout/default-layout.component.html
@@ -41,10 +41,10 @@
   <!--app-header-->
   <app-default-header class="mb-4 d-print-none header header-sticky" position="sticky" sidebarId="sidebar1"></app-default-header>
   <!--app-body-->
-  <div class="body flex-grow-1 px-3">
-    <c-container breakpoint="lg" class="h-auto">
+  <div class="body flex-grow-1 px-1 p-0">
+    <div class="container-fluid mx-3">
       <router-outlet></router-outlet>
-    </c-container>
+    </div>
   </div>
   <!--app footer-->
   <app-default-footer></app-default-footer>
