--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -8,9 +8,9 @@
         <div class="card-body">
           <div class="row">
             <div class="col-sm-7 mb-2">
-              <button type="button" class="btn btn-secondary mr-1" data-toggle="modal" >
-                Create New Country
-              </button>
+              
+                <button [cModalToggle]="verticallyCenteredModal.id" cButton >Create Country</button>
+
             </div>
             <div class="col-sm-5 mb-2">
               <div class="row">
@@ -38,7 +38,6 @@
             </div>
           </div>
           <div class="row overflow-auto">
-            
               <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover">
                 <thead>
                   <tr>
@@ -66,26 +65,48 @@
               </table>
 
           </div>
-          
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<button [cModalToggle]="verticallyCenteredModal.id" cButton>Centered modal</button>
 <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
   <c-modal-header>
-    <h5 cModalTitle>Modal title</h5>
+    <h5 cModalTitle>Create Country</h5>
     <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button>
   </c-modal-header>
   <c-modal-body>
-    Woohoo, you are reading this text in a modal!
+      <form [formGroup]="countryForm" >
+    <div class="col-md-12">
+      <!-- <c-input-group class="mb-3">
+        <span cInputGroupText id="basic-addon1">Name</span>
+        <input aria-describedby="basic-addon1"
+              aria-label="Name"
+              cFormControl
+              placeholder="Name"
+        />
+      </c-input-group> -->
+
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="name" placeholder="Name">
+        <label for="floatingInput">Name</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="code" placeholder="Code">
+        <label for="floatingInput">Code</label>
+      </div>
+      <div class="form-floating">
+        <textarea class="form-control" placeholder="Remarks" id="remarks"></textarea>
+        <label for="floatingTextarea">Remarks</label>
+      </div>
+    </div>
+  </form>
   </c-modal-body>
   <c-modal-footer>
     <button [cModalToggle]="verticallyCenteredModal.id" cButton color="secondary">
       Close
     </button>
-    <button cButton color="primary">Understood</button>
+    <button cButton color="primary" (onClick)="save($event)">Save</button>
   </c-modal-footer>
 </c-modal>
