--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -3,13 +3,14 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-          <i class="fa fa-align-justify"></i> Country List
+          <i class="fa fa-align-justify" ></i> Country List
         </div>
         <div class="card-body">
           <div class="row">
             <div class="col-sm-7 mb-2">
 
-                <button [cModalToggle]="verticallyCenteredModal.id" cButton >Create Country</button>
+                <button [cModalToggle]="verticallyCenteredModal.id" cButton  [hidden]="isEdit">Create Country</button>
+                <button [cModalToggle]="verticallyCenteredModal.id" cButton  [hidden]="!isEdit">Update Country</button>
 
             </div>
             <div class="col-sm-5 mb-2">
@@ -45,6 +46,7 @@
                     <th>Code</th>
                     <th>created on</th>
                     <th>Remarks</th>
+                    <th>Action</th>
                   </tr>
                 </thead>
                 <tbody *ngIf="persons?.length != 0">
@@ -53,6 +55,16 @@
                     <td>{{ person.code }}</td>
                     <td>{{ person.createdOn | date:'medium' }}</td>
                     <td>{{ person.remarks }}</td>
+                    <td>
+                      <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-secondary" (click)="edit(verticallyCenteredModal,person)">
+                         Edit
+                        </button>
+                        <button type="button" class="btn btn-danger" >
+                          Delete
+                        </button>
+                      </div>
+                    </td>
                   </tr>
                 </tbody>
                 <tbody *ngIf="persons?.length == 0">
@@ -75,7 +87,7 @@
     <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button>
   </c-modal-header>
   <c-modal-body>
-    <div class="col-md-12">
+    <div class="col-md-12"  [hidden]="!isEdit">
         <div class="form-floating mb-3">
           <input type="text" class="form-control" formControlName="name" id="name" placeholder="Name">
           <label for="floatingInput">Name</label>
