--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -1,3 +1,4 @@
+
 <div class="animated fadeIn">
   <div class="row">
     <div class="col-lg-12">
@@ -8,8 +9,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col-sm-7 mb-2">
-                <button (click)="reset()">Click</button>
-                <!-- <button [cModalToggle]="verticallyCenteredModal.id" (click)="reset()" cButton>Create Country</button> -->
+                <button [cModalToggle]="verticallyCenteredModal.id" (click)="reset()" cButton>Create Country</button>
 
             </div>
             <div class="col-sm-5 mb-2">
