--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -59,7 +59,7 @@
                         <button type="button" class="btn btn-secondary" (click)="edit(verticallyCenteredModal,person)">
                          Edit
                         </button>
-                        <button type="button" class="btn btn-danger" >
+                        <button type="button" class="btn btn-danger" (click)="delete(person.id)">
                           Delete
                         </button>
                       </div>
