--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -43,7 +43,7 @@
                   <tr>
                     <th>Name</th>
                     <th>Code</th>
-                    <th>created on</th>
+                    <th>Created On</th>
                     <th>Remarks</th>
                     <th>Action</th>
                   </tr>
